Fixed broken source_tarball target Refactored some Java 5 dependent code